Added more styling to band page. Modified Edit Profile page to be similar to other Devise pages.

--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -4,8 +4,8 @@
 
 <div class="container">
   <aside class="profile-left">
-    <%= image_tag @band.poster.profile %><br />
-    <h3>Bio:</h3>
+    <br /><%= image_tag @band.poster.profile %><br />
+    <br /><h3>Bio:</h3>
       <p><%= @band.description %></p>
     <h3>Band Leader:</h3>
       <p><%= @band.leader.firstname %>
