--- a/app/assets/stylesheets/musicians.scss
+++ b/app/assets/stylesheets/musicians.scss
@@ -101,7 +101,9 @@ p {
   margin: 5%;
   background-color: #2b2b2b;
   border-radius: 28pt;
-  margin: 2%;
+  margin-left: auto;
+  margin-right: auto;
+  color: white;
 }
 
 #map {
