--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -54,7 +54,7 @@
     </div>
 
     <div class="field">
-      <%= f.label :avatar %><br />
+      <%= f.label :avatar, "Photo" %><br />
       <%= f.file_field :avatar %>
     </div>
 
