--- a/app/views/home/_bands.html.erb
+++ b/app/views/home/_bands.html.erb
@@ -1,13 +1,14 @@
 <div class="row" data-equalizer data-equalize-on="medium" id="test-eq">
 
   <% @bands.each do |band| %>
-    <div class="large-4 columns">
+
+    <div class="small-4 large-4 columns">
+      <%= link_to band_path(band.id) do %>
       <div class="equalizer">
         <div class="card">
           <%= image_tag band.poster.card, class: "musc"%>
           <div class="card-text">
 
-              <%= link_to band_path(band.id) do %>
               <p class="font-title"><%= band.name  %>
               </p>
               <p class="font-description"><%= band.description %></p>
@@ -17,5 +18,3 @@
     </div>
     <% end %>
   <% end %>
-
-</div>
