--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,25 +4,25 @@
 <body>
   <header>
     <%= render "home/video" %>
-  </header>
-  <main>
     <section class="text-center">
       <h1 id="title">Welcome to Band Aide</h1>
     </section>
-
+  </header>
+  <main>
       <h3>Bands near you:</h3>
-        <div class="bands">
-            <%= render "home/bands" %>
-        </div>
+      <div id="bands-list">
+        <%= render "home/bands" %>
+      </div>
+    <h3>Musicians near you:</h3>
+    <div id="musicians-list">
+      <%= render "home/musicians" %>
+    </div>
 
-      <h3>Musicians near you:</h3>
-        <div class="musicians">
-          <%= render "home/musicians" %>
-        </div>
+
   </main>
   <aside>
     <div class="search-category-list">
-      <p>Filter by Genre:</p>
+      <h3>Filter by Genre:</h3>
       <div class="genres-scroll">
         <%= link_to "All", remote: true, class: "All" %>
         <% @genres.each do |genre| %>
@@ -33,7 +33,7 @@
   </aside>
   <aside>
     <div class="search-category-list">
-      <p>Filter by Position:</p>
+      <h3>Filter by Skill:</h3>
       <div class="positions-scroll">
         <%= link_to "All", remote: true, class: "All" %>
         <% @positions.each do |position| %>
