--- a/app/views/home/_musicians.html.erb
+++ b/app/views/home/_musicians.html.erb
@@ -1,6 +1,6 @@
 <div class="row" data-equalizer data-equalize-on="medium" id="test-eq">
     <% @musicians.each do |musician| %>
-    <div class="small-4 large-4 columns">
+    <div class="medium-4 large-4 columns">
       <div class="equalizer">
         <div class="card">
           <%= link_to musician_path(musician.id) do %>
