--- a/app/views/home/_bands.html.erb
+++ b/app/views/home/_bands.html.erb
@@ -2,7 +2,7 @@
 
   <% @bands.each do |band| %>
 
-    <div class="small-4 large-4 columns">
+    <div class="medium-4 large-4 columns">
       <%= link_to band_path(band.id) do %>
       <div class="equalizer">
         <div class="card">
