Added some js and css class so that the aside will stick if it scrolls too far

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,7 +18,7 @@
         <%= render "home/bands" %>
       </div>
   </main>
-  <aside>
+  <aside class="aside-lock">
     <div class="search-category-list">
       <h3>Filter by Skill:</h3>
       <div class="positions-scroll">
@@ -28,8 +28,8 @@
         <% end %>
       </div>
     </div>
-  </aside>
-  <aside>
+    <br />
+    <br />
     <div class="search-category-list">
       <h3>Filter by Genre:</h3>
       <div class="genres-scroll">
