--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -51,6 +51,13 @@ aside {
   }
 }
 
+.aside-lock {
+  position: fixed;
+  right:0;
+  top:  2%;
+  z-index: 0;
+}
+
 #welcome {
   display: inline;
   margin: auto;
@@ -67,7 +74,7 @@ aside {
 
 .logo {
   position: absolute;
-  z-index: 2;
+  z-index: 1;
   margin: auto;
   display: block;
   width:  80%;
@@ -82,7 +89,7 @@ aside {
   margin: auto;
   height: auto;
   width: 100%;
-  z-index: 1;
+  z-index: 0;
   position: relative;
 }
 
