--- a/app/views/home/_bands.html.erb
+++ b/app/views/home/_bands.html.erb
@@ -13,6 +13,11 @@
               </p>
               <p class="font-description"><%= band.description %></p>
           </div>
+          <div class="success progress" role="progressbar" tabindex="0" aria-valuenow="25" aria-valuemin="0" aria-valuetext="25 percent" aria-valuemax="100">
+            <div class="progress-meter" style="width: <%= band.how_full %>%">
+              <p class="progress-meter-text"><%= band.how_full %>%</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
