Added vacant bands to the home page and made a partial and method to find the bands

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -45,6 +45,7 @@ aside {
   width: 20%;
   float: right;
   overflow: hidden;
+  padding: 5px;
 
   a {
     display: block;
@@ -93,7 +94,7 @@ aside {
   position: relative;
 }
 
-#bands-list #musicians-list {
+#bands-list #musicians-list vacant-bands-list {
   min-height: 300px;
 }
 
