Changed the buckets on the map.js to match the seed data

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -118,14 +118,15 @@ aside {
     max-height: 50%;
   }
 
-.musc{
-  min-width: 100%;
-  position: relative;
-}
+  .musc{
+    min-width: 100%;
+    position: relative;
+  }
 
   .skill-image {
     position: absolute;
     top:  35%;
+    z-index: 12;
   }
 
   .card-text {
