Continued front-end styling. Updated bands show and musicians show. Changed button appearances.

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -4,3 +4,15 @@
   margin-left: auto;
   text-align: center;
 }
+
+h1 {
+  font-size: 20pt;
+}
+
+.field {
+  font-size: 14pt;
+}
+
+#field {
+  font-size: 14pt;
+}
