--- a/app/views/bands/_band.html.erb
+++ b/app/views/bands/_band.html.erb
@@ -1,39 +1,41 @@
-<%= form_for @band do |f| %>
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :genre %><br/>
-    <%= f.select :genre_id, options_for_select(@genres.collect {|g| [ g.description, g.id] }) %>
-  </div>
-
-  <div class="field">
-    <%= f.label :description %><br />
-    <%= f.text_field :description %>
-  </div>
-
-  <%= f.fields_for :members, [Member.new] do |member| %>
-    <div id="field">
-      <%= member.label :position %><br />
-      <%= member.select :position_id, options_for_select(@positions.collect  {|p| [ p.description, p.id] }) %>
-    </div>
-  <%end %>
-
-  <!-- <div id= "members">
-    <%= f.fields_for :members do |member| %>
-      <%= render 'member_fields', f: member  %>
-    <% end %>
-
-    <div class='links'>
-      <%= link_to_add_association 'add member', f,  :members %>
+<div class="container">
+  <%= form_for @band do |f| %>
+    <div class="field">
+      <%= f.label :name %><br />
+      <%= f.text_field :name %>
     </div>
 
-  </div> -->
+    <div class="field">
+      <%= f.label :genre %><br/>
+      <%= f.select :genre_id, options_for_select(@genres.collect {|g| [ g.description, g.id] }) %>
+    </div>
 
-  <div>
-    <%= f.submit %>
-  </div>
+    <div class="field">
+      <%= f.label :description %><br />
+      <%= f.text_field :description %>
+    </div>
 
-<% end %>
+    <%= f.fields_for :members, [Member.new] do |member| %>
+      <div id="field">
+        <%= member.label :position %><br />
+        <%= member.select :position_id, options_for_select(@positions.collect  {|p| [ p.description, p.id] }) %>
+      </div>
+    <%end %>
+
+    <!-- <div id= "members">
+      <%= f.fields_for :members do |member| %>
+        <%= render 'member_fields', f: member  %>
+      <% end %>
+
+      <div class='links'>
+        <%= link_to_add_association 'add member', f,  :members %>
+      </div>
+
+    </div> -->
+
+    <div>
+      <%= f.submit %>
+    </div>
+
+  <% end %>
+</div>
