--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
 <head>
   <%= stylesheet_link_tag "home", media: "all" %>
-<link href='https://fonts.googleapis.com/css?family=Raleway:400,900,600,300' rel='stylesheet' type='text/css'></head>
+  <link href='https://fonts.googleapis.com/css?family=Raleway:400,900,600,300' rel='stylesheet' type='text/css'>
+</head>
 <body>
   <header>
     <%= render "home/video" %>
