--- a/app/assets/stylesheets/band.scss
+++ b/app/assets/stylesheets/band.scss
@@ -6,7 +6,7 @@
 
 html, body {
   height: 100%;
-  font-family: "Titillium Web", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 .container {
@@ -14,7 +14,7 @@ html, body {
   margin-right: auto;
   margin-left: auto;
   text-align: center;
-  font-family: "Titillium Web", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 aside {
@@ -36,7 +36,7 @@ main {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Titillium Web", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 h1 {
@@ -88,7 +88,32 @@ p {
   border-radius: 28px;
 }
 
+.button {
+  background-color: #ccc;
+  color: black;
+  border-radius: 28px;
+  position: relative;
+  margin-left:auto;
+  margin-right:auto;
+  border: solid 1px #2b2b2b;
+}
 
+.button:hover {
+  background-color: #2b2b2b;
+  color: white;
+  border-color: white;
+}
+
+#map {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#field {
+  label {
+    color: white;
+  }
+}
 
 form{
   width:300px;
