--- a/app/assets/stylesheets/musicians.scss
+++ b/app/assets/stylesheets/musicians.scss
@@ -6,7 +6,7 @@
 
 html, body {
   height: 100%;
-  font-family: "Titillium Web", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 .container {
@@ -14,7 +14,7 @@ html, body {
   margin-right: auto;
   margin-left: auto;
   text-align: center;
-  font-family: "Titillium Web", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 aside {
@@ -36,7 +36,7 @@ main {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Titillium Web", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 h1 {
@@ -146,7 +146,6 @@ p {
 
 .contact {
   display: block;
-
 }
 
 .button {
@@ -154,10 +153,16 @@ p {
   color: black;
   border-radius: 28px;
   position: relative;
-  right: 50px;
   margin-left:auto;
   margin-right:auto;
-  }
+  border: solid 1px #2b2b2b;
+}
+
+.button:hover {
+  background-color: #2b2b2b;
+  color: white;
+  border-color: white;
+}
 
 #skill_position_id{
   width: 50%;
