Fixed the maps so it should show up on heroku

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -14,10 +14,18 @@
   display: inline-block;
 }
 
+body {
+  display: block;
+}
+
+filter {
+  margin: auto;
+}
+
 main {
-  margin: 2%;
+  margin: auto;
   padding: 0;
-  display: inline;
+  display: block;
   float: left;
   overflow: hidden;
   width:  100%;
