--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -27,10 +27,16 @@ body {
 
 h1 {
   font-weight: 600;
+  font-size: 40pt;
 }
 
 h3 {
   font-weight: 400;
+  font-size: 20pt;
+}
+
+h4 {
+  font-size: 16pt;
 }
 
 main {
