--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -95,7 +95,9 @@
           </div>
           <br>
         <% end %>
+    </div>
 
+    <div id="musicians-map">
         <h2>Musicians near you:</h2>
         <div id="map" data-latitude=<%= @musician.latitude %> data-longitude=<%= @musician.longitude%>>
 
