--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -3,7 +3,7 @@
 </head>
 
 <div class="container">
-  <aside>
+  <aside class="profile-left">
     <br /><%= image_tag @musician.avatar.profile %><br />
     <br />
     <h3>Bio:</h3>
