--- a/app/assets/stylesheets/band.scss
+++ b/app/assets/stylesheets/band.scss
@@ -7,6 +7,7 @@
 html, body {
   height: 100%;
   font-family: "Raleway", sans-serif;
+  color: #2b2b2b;
 }
 
 .container {
@@ -24,6 +25,11 @@ aside {
   border: 5px solid #2b2b2b;
   height: 100%;
   border-radius: 28px;
+}
+
+.profile-left {
+  padding-left: 2%;
+  padding-right: 2%;
 }
 
 main {
@@ -70,6 +76,16 @@ p {
 }
 
 #band-vacancies {
+  margin-left: 5%;
+  margin-right: 5%;
+  background-color: #2b2b2b;
+  border-radius: 28px;
+  color: white;
+  padding: 2%;
+  margin: 5%;
+}
+
+#musicians-map {
   margin-left: 5%;
   margin-right: 5%;
   background-color: #2b2b2b;
