working on show file

--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -55,7 +55,7 @@
             </div>
 
             <div>
-              <%= f.submit "Create Skill", :class => 'button' %>
+              <%= f.submit "Add Skill", :class => 'button' %>
             </div>
           <% end %>
 
