made it so a band leader cannot be removed from a band

--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -35,7 +35,10 @@
 
             <!-- Owners -->
             <% if @band.leader.id == current_musician.id %>
-              <%= button_to 'Remove', band_member_path(@band, member.id), data: {:confirm => 'Are you sure?'}, :method => :delete %>
+                <% if @band.leader.id != member.musician_id %>
+                    <%= button_to 'Remove', band_member_path(@band, member.id), data: {:confirm => 'Are you sure?'}, :method => :delete %>
+                <% end %>
+                
             <%end %>
 
           <%end%>
