--- a/app/views/bands/new.html.erb
+++ b/app/views/bands/new.html.erb
@@ -31,6 +31,11 @@
       <%= f.text_area :description, :columns => "20", :rows =>"5" %>
     </div>
 
+    <div class="field">
+      <%= f.label :poster, "Upload Band Logo" %><br />
+      <%= f.file_field :poster %>
+    </div>
+
     <div>
       <%= f.submit %>
     </div>
