--- a/app/assets/stylesheets/musicians.scss
+++ b/app/assets/stylesheets/musicians.scss
@@ -164,6 +164,21 @@ p {
   border: solid 1px #2b2b2b;
 }
 
+.skill-button {
+  background-color: #ccc;
+  color: black;
+  border-radius: 28px;
+  position: relative;
+  margin-left:auto;
+  margin-right:auto;
+  border: solid 1px #2b2b2b;
+  font-size: 0.75em;
+}
+
+#skills-order {
+  display: in;
+}
+
 .button:hover {
   background-color: #2b2b2b;
   color: white;
