--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -5,9 +5,11 @@
 <div class="container">
   <aside class="profile-left">
     <br /><%= image_tag @band.poster.profile %><br />
-    <br /><h3>Bio:</h3>
+      <br /><h3>Genre:</h3>
+      <p><%= @band.genre.description %></p>
+      <h3>Bio:</h3>
       <p><%= @band.description %></p>
-    <h3>Band Leader:</h3>
+      <h3>Band Leader:</h3>
       <p><%= @band.leader.firstname %>
       <%= image_tag (@band.leader.avatar.thumb) %></p>
       <button class="button" href="mailto:<%= @band.leader.email%>?Subject=Hello">Contact Band Leader</button>
@@ -35,7 +37,7 @@
 
             <!-- Owners -->
             <% if @band.leader.id == current_musician.id %>
-              <%= button_to 'Remove', band_member_path(@band, member.id), data: {:confirm => 'Are you sure?'}, :method => :delete %>
+              <%= button_to 'Remove', band_member_path(@band, member.id), data: {:confirm => 'Are you sure?'}, :method => :delete, class: "button" %>
             <%end %>
 
           <%end%>
