Fixed the drop down so that the skills filter on the search map

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -8,12 +8,12 @@
       <div class="filter_type">
         <h3>Filter by Musician Skill:</h3>
         <select id="position" name="positions">
-          <option data-id="0" data-name="all">All</option>
-          <option data-id="1" data-name="singer">Singer</option>
-          <option data-id="2" data-name="drummer">Drummer</option>
-          <option data-id="3" data-name="lead">Lead</option>
-          <option data-id="4" data-name="bass">Bass</option>
-          <option data-id="5" data-name="keyboard">Keyboard</option>
+          <option data-id="0" data-name="All">All</option>
+          <option data-id="1" data-name="Singer">Singer</option>
+          <option data-id="2" data-name="Drummer">Drummer</option>
+          <option data-id="3" data-name="Lead">Lead</option>
+          <option data-id="4" data-name="Bass">Bass</option>
+          <option data-id="5" data-name="Keyboard">Keyboard</option>
         </select>
       </div>
 
