--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -81,12 +81,9 @@
       <% end %>
     </div>
 
-    <div id="member-band-info">
-
-
       <div id="member-of-bands">
-        <% if @musician.members.count > 0 %>
-          <br><h2>Member of:</h2>
+        <br><h2>Member of:</h2>
+          <% if @musician.members.count > 0 %>
           <% @musician.members.each do |member|%>
             <%= image_tag("skills/lead.png", size:  "50x50") if member.position.description == "Lead" %>
             <%= image_tag("skills/lead.png", size:  "50x50") if member.position.description == "Rhythm" %>
@@ -96,24 +93,26 @@
             <%= image_tag("skills/bass.png", size:  "50x50") if member.position.description == "Bass" %>
             <%= link_to member.band.name, band_path(member.band_id), :method => :get %><br />
           <% end %>
+        <% else %>
+          <%= @musician.firstname %> is currently in 0 bands.
         <% end %>
         <br /><br />
       </div>
 
-      <% if musician_signed_in? %><br />
       <div id="bands-owned">
-        <% if current_musician.id == @musician.id %>
-          <% if current_musician.owned_bands.count > 0 %>
-            <br /><h2>Leader of:</h2>
-            <% current_musician.owned_bands.each do |band|%>
+        <br /><h2>Leader of:</h2>
+          <% if @musician.owned_bands.count > 0 %>
+            <% @musician.owned_bands.each do |band|%>
               <%= link_to band.name, band_path(band), :method => :get  %><br />
             <% end %>
+          <% else %>
+            <%= @musician.firstname %> is the leader of 0 bands.<br />
           <% end %>
           <br />
       </div>
 
-      </div>
-
+      <% if musician_signed_in? %><br />
+      <% if current_musician.id == @musician.id %>
         <div id="pending-approvals">
           <% if current_musician.approvals.where(approved: false).count > 0 %>
 
@@ -134,7 +133,6 @@
 
       <div id="youtube-window">
         <% if @musician.youtube_url && @musician.youtube_url != "" %>
-
           <br><h2>Demo Reel</h2>
 
           <div class="embed-container">
