--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -37,9 +37,9 @@
 
             <!-- Owners -->
             <% if @band.leader.id == current_musician.id %>
-              <% if @band.leader.id != member.musician_id  && member.musician_id != nil%>
+              <!-- <% if @band.leader.id != member.musician_id  && member.musician_id != nil%> -->
                   <%= button_to 'Remove', band_member_path(@band, member.id), data: {:confirm => 'Are you sure?'}, :method => :delete, class: "button" %>
-              <% end %>
+              <!-- <% end %> -->
             <%end %>
 
           <%end%>
