changed font color of signin, signout, genre and skill

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -151,6 +151,13 @@ aside {
   font-weight: 600;
 }
 
+.positions-scroll a {
+color:black;  
+}
+
+.genres-scroll a{
+  color: black
+}
 // .equalizer {
 //   position: relative;
 //   padding: 0;
